--- a/sto/board/templates/board/post_detail.html
+++ b/sto/board/templates/board/post_detail.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
+
 {% block content-header %}
-
-
-
 {% endblock %}
 
 {% block content%}
@@ -38,11 +37,11 @@
     </div>
     {% endif %}
 
-    <form action="{% url 'board:comment' post.pk %}" method="POST">
+    <form action="{% url 'board:comment' post.pk %}" method="POST" id="f1" >
         {%csrf_token%}
         <input type="hidden" name="post" value="{{post.pk}}">
         <input type="text" name="content" placeholder="Write your comments">
-        <input type="submit" value="Write" />
+        <input type="submit" value="Write"/>
     </form>
 
     {% for comment in post.comments.all %}
@@ -71,5 +70,9 @@
         }
         location = url
     }
+</script>
+
+<script>
+    {{post.hits_count}}
 </script>
 {% endblock %}
