--- a/sto/board/templates/board/post_list.html
+++ b/sto/board/templates/board/post_list.html
@@ -9,13 +9,14 @@
 {% block content %}
     <br>
     <div class="container">
-        <table class="table-striped table-hover" >
+        <table class="table-striped table-hover table-bordered" >
             <thead>
-                <tr style="text-align:center">
-                    <th style="width:10px">No</th>
-                    <th >제목</th>
-                    <th style="width:150px">글쓴이</th>
-                    <th style="width:150px">등록일</th>
+                <tr>
+                    <th style="width:20px">No</th>
+                    <th style="padding-top:10px" >제목</th>
+                    <th style="width:130px" class="text-center">글쓴이</th>
+                    <th style="width:120px" class="text-center">등록일</th>
+                    <th style="width:80px" class="text-center">조회수</th>
                 </tr>
             </thead>
             <tbody>
@@ -23,8 +24,9 @@
                 <tr  style="cursor:pointer;" onclick="location.href='{{writing.get_absolute_url}}'">
                     <td>{{writing.id}}</td>
                     <td>{{writing.title}}</td>
-                    <td>{{writing.user}}</td>
-                    <td>{{writing.create_dt|date:"Y-m-d"}}</td>
+                    <td class="text-center">{{writing.user}}</td>
+                    <td class="text-center">{{writing.create_dt|date:"Y-m-d"}}</td>
+                    <td class="text-center">{{writing.hits}}</td>
                 </tr>
             {% endfor %}
             </tbody>
