--- a/sto/board/templates/board/post_detail.html
+++ b/sto/board/templates/board/post_detail.html
@@ -11,8 +11,8 @@
     <h1 style=" font-size:40px; font-weight: bold; margin-bottom: 0px;"><i class="fas fa-fish"></i> {{object.title}}
     </h1>
 
-    <P style="font-size:13px; margin-top:2px; border-bottom: 1px solid black;">[작성일 : {{object.modify_dt|date:"Y-m-d"}}]
-        [작성자 : {{user}}]</P>
+    <P style="font-size:13px; margin-top:2px; border-bottom: 1px solid black;">
+    [작성일 : {{object.modify_dt|date:"Y-m-d"}}] [작성자 : {{user}}] [조회수 : {{object.hits}}]</P>
     <div>
         {% autoescape off %}
         {{ object.content }}
@@ -27,15 +27,27 @@
         <a href="{{object.get_next.get_absolute_url}}" title="다음 글">next</a>
         {%endif%}
     </p> {% endcomment %}
-
-    {% if user == post.user %}
+    
     <div class="text-right">
-        <a href="{% url 'board:update' post.id %}" class="mr-3">
+        {% if user == post.user %}
+        
+        <a href="{% url 'board:like' post.id %}" class="">
+            {% if user in post.like.all %}
+                <i class="fas fa-heart"></i>
+            {% else %}
+                <i class="far fa-heart"></i>
+            {% endif %}
+        </a>
+        <span style="font-size:20px; margin-left:8px">{{post.like.count}}</span>
+        <a href="{% url 'board:update' post.id %}" class="mr-3 ml-3">
             <i class="far fa-edit"></i> 수정</a>
         <a href="javascript:deletePost('{% url 'board:delete' post.id %}')" class="text-danger mr-3"><i
                 class="fas fa-trash"></i> 삭제</a>
+        {% else %}
+            <i class="far fa-heart mr-2"></i>{{post.like.count}}
+        {% endif %}
     </div>
-    {% endif %}
+    
 
     <form action="{% url 'board:comment' post.pk %}" method="POST" id="f1" >
         {%csrf_token%}
@@ -43,12 +55,15 @@
         <input type="text" name="content" placeholder="Write your comments">
         <input type="submit" value="Write"/>
     </form>
-
+    {% if user == post.user %}
+    
+    {% endif %}
     {% for comment in post.comments.all %}
         <div class="comment">
             <div class="date">{{comment.comment_date}}</div>
             <a>{{comment.comment_writer}}</a>
             <p>{{comment.comment_contents}}</p>
+            
         </div>
     
     {%empty%}
