--- a/sto/board/templates/board/post_detail.html
+++ b/sto/board/templates/board/post_detail.html
@@ -29,22 +29,26 @@
     </p> {% endcomment %}
     
     <div class="text-right">
-        {% if user == post.user %}
-        
-        <a href="{% url 'board:like' post.id %}" class="">
+        {% if user.is_active %}
             {% if user in post.like.all %}
+                <a href="{% url 'board:like' post.id %}" >
                 <i class="fas fa-heart"></i>
             {% else %}
+                <a href="{% url 'board:like' post.id %}" >
                 <i class="far fa-heart"></i>
             {% endif %}
         </a>
         <span style="font-size:20px; margin-left:8px">{{post.like.count}}</span>
+        {% else %}
+            <i class="far fa-heart mr-2"></i><span style="font-size:20px; margin-left:8px">{{post.like.count}}</span>
+        {% endif %}
+        
+        
+        {% if user == post.user %}
         <a href="{% url 'board:update' post.id %}" class="mr-3 ml-3">
             <i class="far fa-edit"></i> 수정</a>
         <a href="javascript:deletePost('{% url 'board:delete' post.id %}')" class="text-danger mr-3"><i
                 class="fas fa-trash"></i> 삭제</a>
-        {% else %}
-            <i class="far fa-heart mr-2"></i>{{post.like.count}}
         {% endif %}
     </div>
     
