feat: Add sto [funding]

--- a/sto/board/templates/board/post_list.html
+++ b/sto/board/templates/board/post_list.html
@@ -9,7 +9,7 @@
 {% block content %}
     <br>
     <div class="container">
-        <table class="table-striped table-hover table-bordered" >
+        <table class="table-striped table-hover" >
             <thead>
                 <tr>
                     <th style="width:20px">No</th>
