--- a/sto/templates/menu.html
+++ b/sto/templates/menu.html
@@ -16,6 +16,10 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{%url 'board:list' %}"><i class="fas fa-clipboard-list"></i> Board</a>
+            <li class="nav-item">
+                
+                <a class="nav-link" href="{%url 'funding:index' %}"><i class="fas fa-clipboard-list"></i> Funding</a>
+            </li>
         </ul>
         <!-- 우측메뉴 구성 -->
         <ul class="navbar-nav ml-auto">
