--- a/sto/board/templates/board/post_detail.html
+++ b/sto/board/templates/board/post_detail.html
@@ -51,13 +51,18 @@
                 class="fas fa-trash"></i> 삭제</a>
         {% endif %}
     </div>
-    
+    <br>
 
     <form action="{% url 'board:comment' post.pk %}" method="POST" id="f1" >
         {%csrf_token%}
         <input type="hidden" name="post" value="{{post.pk}}">
         <input type="text" name="content" placeholder="Write your comments">
-        <input type="submit" value="Write"/>
+        {% if user.is_active %}
+            <input type="submit" value="Write"/>
+        {% else %}
+            <a href="{% url 'login' %}" class="button  smooth-scroll-middle">Write</a>
+        {% endif %}
+            
     </form>
     {% if user == post.user %}
     
@@ -65,10 +70,14 @@
     {% for comment in post.comments.all %}
         <div class="comment">
             <div class="date">{{comment.comment_date}}</div>
-            <a>{{comment.comment_writer}}</a>
-            <p>{{comment.comment_contents}}</p>
-            
+            <p style="margin-bottom:0px">작성자 : {{comment.comment_writer}}</p>
+            <p style="margin-bottom:0px">{{comment.comment_contents}}</p>
+            {% if user == comment.comment_writer %}
+                <a href="javascript:deletePost('{% url 'board:comment_delete' comment.id %}')" class="text-danger mr-3"><i
+                class="fas fa-trash"></i> 삭제</a>
+            {% endif %}
         </div>
+        <br>
     
     {%empty%}
         <p>No comment</p>
