--- a/sto/donation/templates/donation/campaign.html
+++ b/sto/donation/templates/donation/campaign.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load bootstrap4 %}
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <title>캠페인</title>
     <!-- Required meta tags -->
