--- a/sto/funding/templates/funding/common.html
+++ b/sto/funding/templates/funding/common.html
@@ -11,8 +11,9 @@
             물속의 플랑크톤이나 작은 갑각류를 걸러 먹는 것은 많은 물고기들의 영양 섭취 방법입니다. 마이크로플라스틱을 먹이로 오인해 섭취하는 경우 이들은 소화되지 않고 몸속에 그대로 쌓이게 되고, 이들은 다시 먹이사슬을 따라 상위 단계의 포식자들에게 먹힘으로써 결국 생태계 전반으로 퍼져나갑니다.<br>
             즉,<span style="border-bottom: 2px solid #00cca3;"><strong>내부로부터의 ‘플라스틱 중독’이 일어나  해양 생태계에 치명적인 영향을 미치게 될 것입니다.</strong></span> 지구 표면의 70%를 차지하는 해양 생태계가 교란되면 그 영향은 결국 <span style="border-bottom: 2px solid #00cca3;"><strong>전 지구적으로 확산되어 우리 역시도 그 파멸의 소용돌이에서 자유로울 수 없습니다.</strong></span> 지금 이 시간도 북태평양 바다 위에는 또 하나의 플라스틱 더미가 늘어나고 있을 것입니다. 우리가 쉽게 사용하고 버리는 플라스틱 제품들이 그 속도를 더욱 가속화 시킬지도 모릅니다.<br>
             </div>
-            <div><img src="{% static 'images/펀딩_2.jpg' %}" alt=""/></div>
-            <div><img src="{% static 'images/펀딩_3.jpg' %}" alt=""/></div>
+            <div style="margin-bottom:30px"><img src="{% static 'images/보틀1.jpg' %}" alt=""/></div>
+            <div><img src="{% static 'images/보틀2.jpg' %}" alt=""/></div>
+            <div class="mt-3 mb-4 ml-3"><img src="{% static 'images/보틀3.jpg' %}" alt=""/></div>
         
             <div>
                 <h3><b>| 도서/산간 추가 배송비 안내</b></h3>
