--- a/sto/board/templates/board/post_list.html
+++ b/sto/board/templates/board/post_list.html
@@ -31,19 +31,24 @@
             {% endfor %}
             </tbody>
         </table>
-        
-        <span>
+        <div style="width:400px; margin-left:auto; margin-right:auto;">
+            {% bootstrap_pagination page_obj pages_to_show='5'%}
+        </div>
+        {% comment %} 
             <ul class="pagination pagination-sm justify-content-center" style="margin-bottom:0px">
-                <li class="page-item"><a class="page-link" href="?page=1"><i class="fas fa-angle-double-left"></i></a>
-                </li>
-                {% for page_num in page_obj.paginator.page_range %}
-                    {% comment %} <a href="?page={{page_num}}">{{page_num}}</a> {% endcomment %}
+            <li class="page-item"><a class="page-link" href="?page=1"><i class="fas fa-angle-double-left"></i></a>
+            </li>
+            {% for page_num in page_obj.paginator.page_range %}
+                {% if page_num >= page_obj.number|add:-2 and page_num <= page_obj.number|add:2 %}
                     <li class="page-item"><a class="page-link" href="?page={{page_num}}">{{page_num}}</a></li>
-                {% endfor %}
-                <li class="page-item"><a class="page-link" href="?page={{page_obj.paginator.num_pages}}"><i class="fas fa-angle-double-right"></i></a>
-                </li>
-            </ul> 
-        </span>
+                {%endif%}
+            {% endfor %}
+            <li class="page-item"><a class="page-link" href="?page={{page_obj.paginator.num_pages}}"><i class="fas fa-angle-double-right"></i></a>
+            </li>
+        </ul>  
+        {% endcomment %}
+    
+        
         
         <div class="text-right" style="margin-bottom:30px;margin-top:0px">
             <a href="{%url 'board:add' %}" class="btn btn-primary btn-sm ">
