--- a/sto/templates/menu.html
+++ b/sto/templates/menu.html
@@ -1,10 +1,5 @@
-<style>
-    #id1 {
-    
-    }
-</style>
 <nav class="navbar navbar-expand-md bg-primary navbar-dark sticky-top">
-    <div class="nav-link" style=" cursor:pointer; letter-spacing:1px; font-weight:600;" id="id1"
+    <div class="nav-link" style=" cursor:pointer; letter-spacing:1px; font-weight:600;line-height:25px;font-size:22px;"
             onclick="location.href='{% url 'home' %}'">
         <i class="fas fa-globe-americas"></i> Home</div>        
         {% comment %} <i class="fas fa-globe-americas"></i> Home {% endcomment %}
@@ -15,32 +10,32 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
          <li class="nav-item">
-                <div class="nav-link" style="opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                <div class="nav-link" style="padding-right:0px; opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
                         onclick="location.href='{% url 'donation:intro' %}'">
                     <i class="fas fa-users"></i> About_Us</div>
                 {% comment %} <a class="nav-link" href="{% url 'donation:intro' %}"><i class="fas fa-users"></i> About_Us</a> {% endcomment %}
             </li>
             {% if user.is_active %}
                 <li class="nav-item">
-                    <div class="nav-link" style="opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                    <div class="nav-link" style="padding-right:0px;opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
                         onclick="location.href='{% url 'donation:donation_check' %}'">
                     <i class="fas fa-newspaper"></i> Donation</div>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <div class="nav-link" style="opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                    <div class="nav-link" style="padding-right:0px;opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
                         onclick="location.href='{% url 'login' %}'">
                     <i class="fas fa-newspaper"></i> Donation</div>
                 </li>
             {% endif %}
             
             <li class="nav-item">
-                <div class="nav-link" style="opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                <div class="nav-link" style="padding-right:0px;opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
                     onclick="location.href='{% url 'donation:newsletter' %}'">
                     <i class="fas fa-newspaper"></i> NewsLetter</div>
             </li>
             <li class="nav-item">
-                <div class="nav-link" style="opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                <div class="nav-link" style="padding-right:0px;opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
                     onclick="location.href='{% url 'board:list' %}'">
                     <i class="fas fa-clipboard-list"></i> Board</div>
             <li class="nav-item">
@@ -55,24 +50,28 @@
             {% if user.is_active %}
             <!-- 로그인 상태 -->
             <li class="nav-item d-none d-sm-inline-block">
-                <a class="nav-link" href="{% url 'password_change' %}">
-                
+                <div class="nav-link" style="padding-right:0px;opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                    onclick="location.href='{% url 'password_change' %}'">
                 {% comment %} {{user.username}} = 현재 사용자 id {% endcomment %}
                     <i class="fas fa-user"></i> {{user.username}}</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a class="nav-link" href="{% url 'logout' %}">
+                <div class="nav-link" style="opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                    onclick="location.href='{% url 'logout' %}'">
                     <i class="fas fa-sign-out-alt"></i> 로그아웃</a>
             </li>
             {% else %}
             <!-- 로그아웃 상태 -->
             <li class="nav-item d-none d-sm-inline-block">
-                <a class="nav-link" href="{% url 'login' %}">
+                <div class="nav-link" style="padding-right:0px;opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                    onclick="location.href='{% url 'login' %}'">
                     <i class="fas fa-sign-in-alt"></i> 로그인</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a class="nav-link" href="{% url 'accounts:register' %}">
+                <div class="nav-link" style="opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                    onclick="location.href='{% url 'accounts:register' %}'">
                     <i class="fas fa-user-plus"></i> 회원가입</a>
+                
             </li>
             {% endif %}
         </ul>
