--- a/sto/board/templates/board/post_form.html
+++ b/sto/board/templates/board/post_form.html
@@ -11,10 +11,9 @@
             {% csrf_token %}
             {%bootstrap_form form%}
             
-            <button type="submit" class="btn btn-primary">
+            <a type="submit" class="btn btn-primary">
                 <i class="fas fa-check"></i> 확인
-            
-            </button>
+            </a>
             <a href="javascript:history.back()" class="btn btn-primary">
                 <i class="fas fa-undo"></i> 취소
             
