--- a/sto/templates/menu.html
+++ b/sto/templates/menu.html
@@ -68,7 +68,7 @@
                     <i class="fas fa-sign-in-alt"></i> 로그인</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <div class="nav-link" style="opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
+                <div class="nav-link" style="padding-left:3px; opacity:0.8; cursor:pointer; letter-spacing:1px; font-weight:600"
                     onclick="location.href='{% url 'accounts:register' %}'">
                     <i class="fas fa-user-plus"></i> 회원가입</a>
                 
